Rename the "About" page

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -15,7 +15,7 @@
           </button>
           <div class="dropdown-content">
             <a href="../index.html">Home</a>
-            <a href="#">About</a>
+            <a href="#">About us</a>
             <a href="html/contact.html">Contact</a>
           </div>
         </div> 
