--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               </button>
               <div class="dropdown-content">
                 <a href="#" style="background-color: gray;">Home</a>
-                <a href="html/about.html">About</a>
+                <a href="html/about_us.html">About</a>
                 <a href="html/contact.html">Contact</a>
               </div>
             </div> 
