--- a/html/about_us.html
+++ b/html/about_us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-    <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/about_us.css">
 </head>
 
 <body>
