add contact_us.html and contact.css

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -15,8 +15,8 @@
           </button>
           <div class="dropdown-content">
             <a href="../index.html">Home</a>
-            <a href="#">About us</a>
-            <a href="html/contact.html">Contact</a>
+            <a href="#" style="background-color: gray;">About us</a>
+            <a href="./contact_us.html">Contact</a>
           </div>
         </div> 
       </div>
