--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               <div class="dropdown-content">
                 <a href="#" style="background-color: gray;">Home</a>
                 <a href="html/about_us.html">About us</a>
-                <a href="html/contact.html">Contact</a>
+                <a href="./html/contact_us.html">Contact</a>
               </div>
             </div> 
           </div>
