--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -33,18 +33,16 @@
             <p>0877732472</p></b>
           </div>
           <div class="card">
-            <img href="../images/clipart52822.png" class="pic">
+            <img src="../images/people-talking.jpg" class="pic">
             <p>In person meeting:</p>
             <form>
-                <label>Full name:</label>
-                <input type="text">
-                <label>City:</label>
-                <input type="text">
-                <label>Date:</label>
-                <input type="date">
-                <label>Time:</label>
-                <input type="time">
-                <input type="submit">
+                <label>Name:</label>
+                  <input type="text" required placeholder="Kaloyan Kalinov Ivanov">
+                  <label>Phone:</label>
+                  <input type="number" required placeholder="0876885563">
+                  <label>email:</label>
+                  <input type="email" required placeholder="KKIvanov22@codingburgas.org">
+                  <input type="submit">
             </form>
           </div>
        
