update home page

--- a/index.html
+++ b/index.html
@@ -18,5 +18,50 @@
               </div>
             </div> 
           </div>
+            
+          
+                <div class="main">
+                   <h1 id="ft"> WELCOME TO</h1><h1 id="tt">Stryder</h1>
+                   <div id="ut"><b><p>In stryder you will learn about powered exoskeletons:</p></b></div>
+                  <div class="p">
+                    <h1 class="un">What is an exoskeleton?</h1>
+                  <b> 
+                    <p>A powered exoskeleton, is a mobile machine that is wearable over all or part of the human body, providing ergonomic structural support and powered by a system of electric motors, pneumatics, levers, hydraulics or a combination of cybernetic technologies, while allowing for sufficient limb movement with increased strength and endurance. </p>
+                  </b>
+                  <img src="../Project-Robotics/images/exoskeleton.jpg" class="pic">
+                </div>
+                <div id="ut"><b><p>HISTORY</p></b></div>
+                <div class="p">
+                  <h1 class="un">What was the first exoskeleton?</h1>
+                  <b><p>In 1917, United States inventor Leslie C. Kelley developed what he called a pedomotor, which operated on steam power with artificial ligaments acting in parallel to the wearer's movements. This system was able to supplement human power with external power.</p></b>
+                  <img src="../Project-Robotics/images/firstskeleton.jpg" class="pic">
+                </div>
+                <div class="p">
+                  <h1 class="un">Hardiman</h1>
+                  <b><p>In the 1960s, the first true 'mobile machines' integrated with human movements began to appear. A suit called Hardiman was co-developed by General Electric and the US Armed Forces. The suit was powered by hydraulics and electricity and amplified the wearer's strength by a factor of 25, so that lifting 110 kilograms (240 lb) would feel like lifting 4.5 kilograms (10 lb). A feature called force feedback enabled the wearer to feel the forces and objects being manipulated.</p></b>
+                <img src="./images/hardiman.jpeg" class="pic">
+                </div>
+                <div class="p">
+                  <h1 class="un">Lifesuit</h1>
+                 <b><p>In 1986, an exoskeleton called the Lifesuit was designed by Monty Reed, a US Army Ranger who had broken his back in a parachute accident. While recovering in the hospital, he read Robert Heinlein's science fiction novel Starship Troopers, and Heinlein's description of mobile infantry power suits inspired Reed to design a supportive exoskeleton. In 2001, Reed began working full-time on the project, and in 2005 he wore the 12th prototype in the Saint Patrick's Day Dash foot race in Seattle, Washington.</p></b> 
+                <img src="./images/lifesuit.jpg" class="pic">
+                </div>
+                <div id="ut"><b><p>USES</p></b></div>
+                <div class="p">
+                  <h1 class="un">Medical</h1>
+                  <b><p>In medical application, e.g. with complete paraplegia after spinal cord injury, an exoskeleton can be an additional option for the supply of aids if the structural and functional properties of the neuromuscular and skeletal system are too limited to be able to achieve mobilization with an orthosis.</p></b>
+                 <img src="./images/me.jpg" class="pic">
+                </div>
+                <div class="p">
+                  <h1 class="un">Military</h1>
+                  <b><p>Developing a full-body suit that meets the needs of soldiers has proven challenging. The Defense Advanced Research Projects Agency (DARPA) launched the Warrior Web program in September 2011 and has developed and funded several prototypes, including a "soft exosuit" developed by Harvard University's Wyss Institute.</p></b>
+                  <img src="./images/military.jpg" class="pic">
+                </div>
+                <div class="p">
+                  <h1 class="un">Industry</h1>
+                  <b><p>Passive exoskeleton technology is increasingly being used in the automotive industry, with the goal of reducing worker injury (especially in the shoulders and spine) and reducing errors due to fatigue. They are also being examined for use in logistics.</p></b>
+                  <img src="./images/industrial.jpg" class="pic">
+                </div>
+                  </div>
     </body>
 </html>
