update about us

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -25,31 +25,31 @@
 
         <div class="M" id="column">
           <img src="../images/martin.jpg" alt="Martin" class="photo">
-          <p>Мартин Матев Шавов </p>
+          <p>Martin Matev Shavov </p>
           <br> 
-          <p>8Г клас </p>
+          <p>class 8G</p>
           <br>
-          <p>Роля - Scrum trainer</p>
+          <p>Role - Scrum trainer</p>
           <br>
           <p>MMShavov22@codingburgas.bg</p>
         </div>
 
         <div class="V" id="column">
           <img src="../images/velizar.jpg" alt="Velizar" class="photo">
-          <p>Велизар Николаев Михайлов</p>
+          <p>Velizar Nikolaev Mihaylov</p>
           <br>
-          <p>8A клас</p>
+          <p>class 8A</p>
           <br>
-          <p>Роля - designer</p>
+          <p>Role - designer</p>
           <br>
           <p>VNMihaylov22@codingburgas.bg</p>
         </div>
 
         <div class="K" id="column">
           <img src="../images/kaloyan.jpg" alt="Kaloyan" class="photo">
-          <p>Калоян Калинов Иванов</p>
+          <p>Kaloyan Kalinov Ivanov</p>
           <br>
-          <p>8Б клас</p>
+          <p>class 8B</p>
           <br>
           <p>Роля - Frontend Developer</p>
           <br>
@@ -58,11 +58,11 @@
 
         <div class="D" id="column">
           <img src="../images/Daniel.jpg" alt="Daniel" class="photo">
-          <p>Даниел Красимиров Костадинов</p>
+          <p>Daniel Krasimirov Kostadinov</p>
           <br>
-          <p>8В клас </p>
+          <p>class 8V </p>
           <br>
-          <p>Роля - Frontend Developer</p>
+          <p>role - Frontend Developer</p>
           <br>
           <p>DKrKostadinov22@codingburgas.bg</p>
         </div>
