update about us

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -51,7 +51,7 @@
           <br>
           <p>class 8B</p>
           <br>
-          <p>Роля - Frontend Developer</p>
+          <p>Role - Frontend Developer</p>
           <br>
           <p>KKIvanov22@codingburgas.bg</p>
         </div>
