update about us

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -62,7 +62,7 @@
           <br>
           <p>class 8V </p>
           <br>
-          <p>role - Frontend Developer</p>
+          <p>Role - Frontend Developer</p>
           <br>
           <p>DKrKostadinov22@codingburgas.bg</p>
         </div>
